H1 Spacing Fix
- Added 1% left padding to the H1

--- a/css/main.css
+++ b/css/main.css
@@ -215,9 +215,10 @@ span{
 
 @media only screen and (min-width: 50em) {
     
-    h1 { 
+     h1 { 
         float: left;
-}
+        padding-left:1%;
+    }
         
     .nav {
         padding: 0;
@@ -246,6 +247,12 @@ span{
 
 
 @media only screen and (min-width: 60em) {
+    
+      h1 { 
+        float: left;
+        padding-left:1%;
+    }
+    
     
     .nav {
         padding: 0;
